# linalg

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  Makefile
.github/workflows/: format.yml  test.yml  tidy.yml
include/: matrix.hpp  sparse_matrix.hpp
src/: main.cpp  matrix.cpp  sparse_matrix.cpp
tests/: test_matrix.cpp  test_sparse_matrix.cpp
